# python-package-template

./: Makefile  pyproject.toml
configs/: readme.md
src/my_project/configs/: abstract_loader.py  concrete_loaders.py  readme.md  schema.py
terraform/: .gitignore  main.tf  variables.tf
terraform/base/: aws_secrets_manager.tf  github.tf  variables.tf
